--- a/www/index.html
+++ b/www/index.html
@@ -1,18 +1,45 @@
-<!-- http://204.216.213.176/inf3php/ES01/ -->
-<body>
-    <h1>Ciao! Benvenuto nel mio ambiente di sviluppo di pagine PHP per gli studenti di 5H! By FB</h1>
-    <br /><br />
-    <h3>ES01 - PHP Hello World</h3>
-    <a href="ES01/">Hello PHP</a><br />
-    <a href="ES01/es01.php">Hello</a><br />
-    <a href="ES01/es01_var.php">Prove con variabili e costanti</a><br />
-    <a href="ES01/es_table.php">Generazione dinamica di una tabella html</a><br />
-    <br /><br />
-    <h3>ES02 - Accesso a pagina riservata</h3>
-    <a href="ES02A">Accesso a pagina riservata</a><br />
-    <a href="https://github.com/filippo-bilardo/INFORMATICA_3_PHP/tree/main/www/ES02A">Codice sorgente su GitHub</a><br />
-    <br /><br />
-    <h3>ES03 - Form validation</h3>
-    <h3>ES04 - Gestione delle sessioni nelle applicazioni web</h3>
+<!doctype html>
+<html lang="it">
 
+<head>
+	<meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Marco Grassi - Home Page</title>
+	<link rel="stylesheet" href="index.css">
+</head>
+
+<body>
+	<div class="su">
+		<div></div>
+		<p>Questo è l'inizio della pagina </p>
+		<a class="signin" href="sign_in_up\signinup.html">SIGN IN</a>
+		<img class="profile" src="img\\default_profile.png" alt="img">
+	</div>
+	<input type="checkbox" class="toggler">
+	<div class="hamburger">
+		<div></div>
+	</div>
+	<div class="menu">
+		<div>
+			<ul>
+				<li><a href="5H_23_24/es_001/es_a/index.html">Tav_pit</a></li>
+				<li><a href="5H_23_24/es_001/es_b/index.php">saluto</a></li>
+				<li><a href="5H_23_24/es_002/es_a/index.html">es_2a</a></li>
+				<li><a href="5H_23_24/es_002/es_b/index.php">es_2b</a></li>
+				<li><a href='5H_23_24/es_002/es_c/index.php'>es_2c</a></li>
+				<li><a href='5H_23_24/es_003/index.php'>es_3</a></li>
+				<li><a href="5H_23_24/es_004/es_a/index.php">es_4a</a></li>
+				<li><a href="5H_23_24/es_004/es_b/index.php">es_4b</a></li>
+				<li><a href="5H_23_24/es_004/es_c/index.php">es_4c</a></li>
+			</ul>
+		</div>
+	</div>
+	<main>
+
+	</main>
 </body>
+<footer class="giù">
+	<p> Questa è la fine della pagina</p>
+</footer>
+
+</html>>
